--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>© 2024 Your Name. All rights reserved.</p>
+        <p>© 2024 Ayush Negi. All rights reserved.</p>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
