--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         <h2>Projects</h2>
         <div class="projects-grid">
             <div class="project-card">
-                <h3>Project 1</h3>
-                <p>Description of the project...</p>
-                <a href="#" class="btn-tertiary">View Project</a>
+                <h3>SMDB</h3>
+                <p>A social media web app that connects colleges and university consist of a vast database of study material and some more features. </p>
+                <a href="https://clgunity.freewebhostmost.com/" target="/" class="btn-tertiary">View Project</a>
             </div>
             <div class="project-card">
-                <h3>Project 2</h3>
-                <p>Description of the project...</p>
-                <a href="#" class="btn-tertiary">View Project</a>
+                <h3>Dhunmagan.com</h3>
+                <p>A song downloading and streaming web applicaion with over 13000 of traffic</p>
+                <a href="https://www.dhunmagan.com/" target="/" class="btn-tertiary">View Project</a>
             </div>
         </div>
     </section>
@@ -73,7 +73,44 @@
     <section id="skills" class="skills">
         <h2>Skills</h2>
         <div class="skills-icons">
-            <img src="assets/skills-icon.svg" alt="Skills Icon" style="width: 10%;">
+            <!-- <img src="assets/skills-icon.svg" alt="Skills Icon" style="width: 10%;"> -->
+        </div>
+        <div class="carousel-container">
+            <div class="carousel">
+                <div class="carousel-track">
+                    <div class="carousel-slide"><img src="assets/logo1.png" alt="Logo 1"></div>
+                    <div class="carousel-slide"><img src="assets/logo2.png" alt="Logo 2"></div>
+                    <div class="carousel-slide"><img src="assets/logo3.png" alt="Logo 3"></div>
+                    <div class="carousel-slide"><img src="assets/logo4.png" alt="Logo 4"></div>
+                    <div class="carousel-slide"><img src="assets/logo5.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo62.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo7.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo8.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo9.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo10.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo11.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo12.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo13.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo14.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo15.png" alt="Logo 5"></div>
+                    <!-- Repeat logos to make the loop -->
+                    <div class="carousel-slide"><img src="assets/logo1.png" alt="Logo 1"></div>
+                    <div class="carousel-slide"><img src="assets/logo2.png" alt="Logo 2"></div>
+                    <div class="carousel-slide"><img src="assets/logo3.png" alt="Logo 3"></div>
+                    <div class="carousel-slide"><img src="assets/logo4.png" alt="Logo 4"></div>
+                    <div class="carousel-slide"><img src="assets/logo5.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo62.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo7.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo8.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo9.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo10.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo11.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo12.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo13.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo14.png" alt="Logo 5"></div>
+                    <div class="carousel-slide"><img src="assets/logo15.png" alt="Logo 5"></div>
+                </div>
+            </div>
         </div>
     </section>
 
