--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+
+    <meta name="google-site-verification" content="dXwqpYNA3AonfID3HBNprfLGlWmhHLJZHMK9Mojtftk" />
 </head>
 <body>
     <!-- Navbar -->
