--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <meta name="description" content="Welcome to the portfolio of Ayush Negi, a skilled Full Stack Web Developer. Explore my projects showcasing expertise in front-end and back-end technologies, including HTML, CSS, JavaScript, Node.js, and more. Let's connect to bring your ideas to life and create exceptional digital experiences!">
+    <meta name="keywords" content="portfolio | Ayush Negi | AyushNegi008 | Ayush_Negi_008 | Ayush Negi 008 | Ayush Negi portfolio | ">
+    <meta name="author" content="Ayush Negi">
+    
     <title>Ayush Negi- Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
