--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <!-- <img src="assets/skills-icon.svg" alt="Skills Icon" style="width: 10%;"> -->
         </div>
         <div class="carousel-container">
-            <div class="carousel" style="height: 350px">
+            <div class="carousel" style="height: 380px">
                 <div class="carousel-track">
                     <div class="carousel-slide"><img src="assets/logo1.png" alt="Logo 1"></div>
                     <div class="carousel-slide"><img src="assets/logo2.png" alt="Logo 2"></div>
@@ -136,9 +136,10 @@
                 <div id="globe-container" style="
                 display: flex;
                 align-content: center;
-                align-items: center;
+                align-items: flex-start;
                 justify-content: center;
-                margin-right: 40%;">
+                margin-right: 50%;
+                transform: translate(50%);">
                     <canvas width="350" height="350" id="myCanvas">
                         <ul id="skill-list">
                             <li> <a href="#"><img src="assets/logo1.png" width="40" height="40" alt="CSS"></a></li>
