--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
 
+    <link rel="icon" type="image/x-icon" href="assets/skullcode.webp">
+
     <meta name="google-site-verification" content="dXwqpYNA3AonfID3HBNprfLGlWmhHLJZHMK9Mojtftk" />
 </head>
 <body>
